<resources>
    <string name="app_name">Medic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Пропустить</string>
    <string name="analyzes">Анализы</string>
    <string name="express">Экспресс сбор и получение проб</string>
    <string name="notifications">Уведомления</string>
    <string name="results">Вы быстро узнаете о результатах</string>
    <string name="end">Завершить</string>
    <string name="monitoring">Мониторинг</string>
    <string name="doctors">Наши врачи всегда наблюдают\n за вашими показателями здоровья</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="login_for">Войдите, чтобы пользоваться функциями\nприложения</string>
    <string name="e_mail">Вход по E-mail</string>
    <string name="example_mail_ru">example@mail.ru</string>
    <string name="next">Далее</string>
    <string name="or_login">Или войдите с помощью</string>
    <string name="yandex">Войти с Яндекс</string>
    <string name="enter_email">Введите код из E-mail</string>
    <string name="resend_code">Отправить код повторно можно\nбудет через ${p0/1000} секунд</string>
    <string name="create_pass">Создайте пароль</string>
    <string name="for_protect">Для защиты ваших персональных данных</string>
    <string name="create_card">Создание карты\nпациента</string>
    <string name="without_card">Без карты пациента вы не сможете заказать анализы.</string>
    <string name="in_card">В картах пациентов будут храниться результаты\nанализов вас и ваших близких.</string>
    <string name="name">Имя</string>
    <string name="surname">Отчество</string>
    <string name="last_name">Фамилия</string>
    <string name="DOB">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="create">Создать</string>
    <string name="search_analyzes">Искать анализы</string>
</resources>