<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateCardFragment">

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="276dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sfprodisplay_400"
        android:text="@string/skip"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="115dp"
        android:fontFamily="@font/sfprodisplay_700"
        android:text="@string/create_card"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sfprodisplay_400"
        android:text="@string/without_card"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sfprodisplay_400"
        android:text="@string/in_card"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/radius_edittext"
        android:fontFamily="@font/sfprodisplay_400"
        android:hint="@string/name"
        android:paddingStart="14dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/radius_edittext"
        android:fontFamily="@font/sfprodisplay_400"
        android:hint="@string/surname"
        android:paddingStart="14dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/lastnameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/radius_edittext"
        android:fontFamily="@font/sfprodisplay_400"
        android:hint="@string/last_name"
        android:paddingStart="14dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameEditText" />

    <EditText
        android:id="@+id/dobEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/radius_edittext"
        android:fontFamily="@font/sfprodisplay_400"
        android:hint="@string/DOB"
        android:paddingStart="14dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastnameEditText" />

    <AutoCompleteTextView
        android:id="@+id/spisok"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/radius_edittext"
        android:completionThreshold="1"
        android:fontFamily="@font/sfprodisplay_400"
        android:hint="@string/gender"
        android:paddingStart="14dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_create"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sfprodisplay_600"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spisok" />

</androidx.constraintlayout.widget.ConstraintLayout>