<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.OnBoard3Fragment">

    <TextView
        android:id="@+id/skipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/end"
        android:fontFamily="@font/lato_600"
        android:textColor="@color/blue"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/plusImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/shape" />

    <TextView
        android:id="@+id/analyzesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/monitoring"
        android:fontFamily="@font/lato_600"
        android:textColor="@color/green"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/expressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="80dp"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="79dp"
        android:fontFamily="@font/sprodisplay_400"
        android:text="@string/doctors"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/screen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/group_3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="335dp"/>

    <ImageView
        android:id="@+id/illustrationImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/illustration_1"
        android:layout_marginTop="440dp"
        android:layout_gravity="center_horizontal"/>

</FrameLayout>