<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreatePassFragment">

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="276dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sfprodisplay_400"
        android:text="@string/skip"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="87dp"
        android:fontFamily="@font/sfprodisplay_700"
        android:text="@string/create_pass"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="49dp"
        android:fontFamily="@font/sfprodisplay_400"
        android:text="@string/for_protect"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="138dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="137dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toStartOf="@id/card_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/but_active"
            app:strokeWidth="2dp">

            <EditText
                android:id="@+id/edit_text_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="false"
                android:inputType="number"
                android:maxLength="1" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toStartOf="@id/card_3"
            app:layout_constraintStart_toEndOf="@id/card_1"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/but_active"
            app:strokeWidth="2dp">

            <EditText
                android:id="@+id/edit_text_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="false"
                android:inputType="number"
                android:maxLength="1" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toStartOf="@id/card_4"
            app:layout_constraintStart_toEndOf="@id/card_2"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/but_active"
            app:strokeWidth="2dp">

            <EditText
                android:id="@+id/edit_text_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="false"
                android:inputType="number"
                android:maxLength="1" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_4"
            android:layout_width="16dp"
            android:layout_height="16dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_3"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/but_active"
            app:strokeWidth="2dp">

            <EditText
                android:id="@+id/edit_text_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="false"
                android:inputType="number"
                android:maxLength="1" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>